# plog

./: CMakeLists.txt
cmake/: PlogConfig.cmake.in
